GRADLE-81   	 Add convenience methods for classpath resolving
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/branches/RB-0.1@451 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/src/docs/userguide/javaTutorial.tex
+++ b/src/docs/userguide/javaTutorial.tex
@@ -47,7 +47,7 @@ dependencies {
 
 dists {
 	zip() {
-		files(dependencies.resolveClasspath("runtime")) // add dependencies to zip
+		files(dependencies.resolve("runtime")) // add dependencies to zip
 		fileset(dir: "path/distributionFiles")
 	}
 }
