--- a/src/docs/userguide/groovyPlugin.tex
+++ b/src/docs/userguide/groovyPlugin.tex
@@ -1,8 +1,29 @@
 %!TEX root = master.tex
 \chapter{The Groovy Plugin} % (fold)
 \label{cha:the_groovy_plugin}
-The Groovy Plugin extends the JavaPlugin. It can deal with pure Java projects\footnote{We don't recommend this, as the Groovy plugin uses the \emph{Groovyc} Ant task to compile the sources. For pure Java projects you might rather stick with pure \texttt{javac}.}, with mixed Java and Groovy projects and with pure Groovy projects. The Groovy plugin does not add any tasks. It modifies some of the tasks of the JavaPlugin and adds to the \emph{Convention} object.
-\begin{table}[h]
+The Groovy Plugin extends the JavaPlugin. It can deal with pure Java projects\footnote{We don't recommend this, as the Groovy plugin uses the \emph{Groovyc} Ant task to compile the sources. For pure Java projects you might rather stick with pure \texttt{javac}. In particular as you would have to supply a groovy jar for doing this.}, with mixed Java and Groovy projects and with pure Groovy projects. The Groovy plugin does not add any tasks. It modifies some of the tasks of the JavaPlugin and adds to the \emph{Convention} object. See Table \ref{groovylayout}, Table \ref{groovyconvention} and Table \ref{groovyconventionFloatingDir}. It also add a new dependency configuration \texttt{groovy}. 
+
+Gradle is written in Groovy and offers you to write your build scripts in Groovy. But this is an internal aspect of Gradle which is strictly separated from building Groovy projects. You are free to choose the Groovy version your project should be build with. This Groovy version is not just used for compiling your code and running your tests. The \texttt{groovyc} compiler and the the \texttt{groovydoc} tool are also taken from the Groovy version you provide. As usual, with freedom comes responsibility ;). You are not just free to choose a Groovy version, you have to provide one. Gradle expects that the groovy libraries are assigned to the \texttt{groovy} dependency configuration. Here are some examples how this works (the notation depends on your resolvers):
+\begin{Verbatim}
+dependencies {
+    addMavenRepo()
+    groovy "org.codehaus.groovy:groovy-all:1.6-beta-1"
+    // further declarations
+}	
+\end{Verbatim}
+\begin{Verbatim}
+dependencies {
+    addFlatDirResolver('lib', new File(rootDir, 'lib'))
+    clientModule(['groovy'], ":groovy-all:1.5.5") {
+	        dependency(":commons-cli:1.0")
+	        clientModule(":ant:1.7.0") {
+	            dependencies(":ant-junit:1.7.0:jar", ":ant-launcher:1.7.0")
+	        }
+    }
+}	
+\end{Verbatim}
+
+\begin{table}
 	\begin{center}
 	\begin{tabular}{|l|l|} \hline
 	\textbf{Folder} & \textbf{Meaning} \\ \hline
@@ -13,7 +34,8 @@ The Groovy Plugin extends the JavaPlugin. It can deal with pure Java projects\fo
 	\caption{Default Directory Layout (additional to the Java layout)}	
 	\label{groovylayout}
 \end{table}
-\begin{table}[h]
+
+\begin{table}
 	\begin{center}
 		\begin{tabular}{|l|l|l|l|} \hline
 			\textbf{Dir Name} & \textbf{Dir File} & \textbf{Default Value Name} & \textbf{Default Value File}\\ \hline
@@ -23,6 +45,20 @@ The Groovy Plugin extends the JavaPlugin. It can deal with pure Java projects\fo
 	\end{center}
 	\caption{Groovy Convention Object (extends JavaConvention).}
 	\label{groovyconvention}
+\end{table}
+
+\begin{table}
+	\begin{center}
+		\begin{tabular}{|l|l|l|} \hline
+			\textbf{Property} & \textbf{Type} & \textbf{Default Value} \\ \hline
+			floatingGroovySrcDirs & List & empty \\ \hline
+			floatingGroovyResourceDirs & List & empty \\ \hline
+			floatingGroovyTestResourceDirs & List & empty \\ \hline
+			floatingGroovyTestResourceDirs & List & empty \\ \hline
+		\end{tabular}
+	\end{center}
+	\caption{Groovy Convention Object  (extends JavaConvention) - Floating Dir Properties}
+	\label{groovyconventionFloatingDir}
 \end{table}
 
 \noindent All the Groovy source directories can contain Groovy \emph{and} Java code. The Java source directories may only contain Java source code (and can of course be empty)\footnote{We are using the same conventions as introduced by Russel Winders Gant tool (\url{http://gant.codehaus.org}).}
